--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "unidecode": "^0.1.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
