--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
     "pug": "^3.0.2",
+    "tinymce": "^6.8.3",
     "unidecode": "^0.1.8"
   },
   "devDependencies": {
