--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cloudinary": "^2.0.1",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
+    "mongoose-slug-updater": "^3.3.0",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
+    "streamifier": "^0.1.1",
     "tinymce": "^6.8.3",
     "unidecode": "^0.1.8"
   },
