--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
   "scripts": {
     "start": "nodemon index.ts",
     "build": "tsc && node copy-dir.js",
+    "ts.check":"tsc --project tsconfig.json",
+    "add-build":"git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit":[
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -29,6 +36,7 @@
     "@types/node": "^20.11.18",
     "fs-extra": "^11.2.0",
     "nodemon": "^3.0.3",
+    "pre-commit": "^1.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
